[package]
name = "rand-elec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

indicatif = { version = "0.17" }
clap = { version = "4.2", features = [ "derive", "wrap_help" ]}
rand = "0.8"
stats-ci = "0.0.5"
